--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,144 +1,12 @@
-*,::after, ::before
-	margin: 0
-	padding: 0
-	box-sizing: border-box
+@import "abstracts/variable.sass"
+@import "abstracts/mixins.sass"
 
-html
-	font-size: 62.5%
+@import "base/animations.sass"
+@import "base/base.sass"
+@import "base/typography.sass"
 
-body
-	font-family: "Lato", sans-serif
-	font-weight: 400
-	font-size: 1.6rem
-	letter-spacing: .2rem
-	color: #777
+@import "components/button.sass"
 
-	padding: 5rem
-	background-color: #fff
+@import "layout/header.sass"
 
-.container
-	background-color: #f7f7f7
-
-.header
-	position: relative
-	height: 95vh
-	background: linear-gradient(90.05deg, rgba(186, 133, 84, 0.7) 0.03%, rgba(1, 1, 1, 0.7) 99.94%), url(../img/header-backround.jpg) center/cover no-repeat
-	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%)
-	&__logo
-		position: absolute
-		top: 5rem
-		left: 5rem
-		height: 7rem
-		width: 5.6rem
-	&__box
-		position: absolute
-		top: 50%
-		left: 50%
-		transform: translate(-50%, -50%)
-		width: 100%
-		text-align: center
-
-.title-first
-	color: #FFFFFF
-
-	&__main
-		display: block
-		font-weight: 800
-		font-size: 5rem
-		line-height: 6rem
-		letter-spacing: 1rem
-		text-transform: uppercase
-		margin-bottom: 1rem
-		animation-name: LeftToRight
-		animation-duration: 1.7s
-		animation-delay: .5s
-		animation-timing-function: ease
-		backface-visibility: hidden
-		animation-fill-mode: backwards
-
-	&__secondary
-		display: block
-		margin-bottom: 5rem
-		font-weight: 100
-		font-size: 4rem
-		line-height: 4.8rem
-		letter-spacing: .5rem
-		animation-name: RightToleft
-		animation-duration: 1.7s
-		animation-delay: .5s
-		animation-timing-function: ease
-		backface-visibility: hidden
-		animation-fill-mode: backwards
-
-.link-btn
-	position: relative
-	display: inline-block
-	font-weight: 600
-	font-size: 2rem
-	line-height: 2.4rem
-	letter-spacing: .5rem
-	transition: all .3s
-	&:link, &:visited
-		text-transform: uppercase
-		text-decoration: none
-		color: #777
-		padding: 1.5rem 4rem
-		background: #fff
-		border-radius: 5rem
-	&:hover
-		transform: translateY(-4px)
-		box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.3))
-		&::after
-			opacity: 0
-			transform: scaleX(1.5) scaleY(1.7)
-	&:active
-		transform: translateY(-2px)
-		box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.1))
-
-	&::after
-		content: ""
-		width: 100%
-		height: 100%
-		background: #fff
-		border-radius: 5rem
-		display: inline-block
-
-		position: absolute
-		top: 0
-		left: 0
-		z-index: -1
-
-		transition: all .4s
-
-	&_animated
-		animation: BtnmToUp .5s ease-out 1s
-		animation-fill-mode: backwards
-
-	@keyframes LeftToRight
-		0%
-			opacity: 0
-			transform: translateX(-10rem)
-		80%
-			transform: translateX(1rem)
-		100%
-			opacity: 1
-			transform: translateX(0rem)
-
-@keyframes RightToleft
-	0%
-		opacity: 0
-		transform: translateX(10rem)
-	80%
-		transform: translateX(-1rem)
-	100%
-		opacity: 1
-		transform: translateX(0rem)
-
-@keyframes BtnmToUp
-	0%
-		opacity: 0
-		transform: translateY(5rem)
-
-	100%
-		opacity: 1
-		transform: translateY(0rem)
+@import "pages/home.sass"
